The "See x photos" message is now a named view
By giving the <script> tag that holds the handlebars template for
the "See x photos for 18 matching species" link a "data-template-name",
we eliminate the extra <div> that Ember was putting around it (but at
the expense of having to move the tag name we desire into our JS).

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -90,15 +90,18 @@
                     <div class="wait"></div>
                 </div>
 
-                {% handlebars %}
-                {{#view App3.TaxaView tagName="p" class="list-all hidden"}}
-                <a {{action "switch_photo_list"}}>
-                  See {{#if view.show_list}}photos for{{else}}a list of{{/if}}
-                  all <span class="species-count">{{view.taxa_count}}</span>
-                  matching species.
-                </a>
-                {{/view}}
-                {% endhandlebars %}
+                {% verbatim %}
+                <script type="text/x-handlebars"
+                        data-template-name="list-toggle-view">
+                  <a {{action "switch_photo_list"}}>
+                    See
+                    {{#if view.show_list}}photos for{{else}}a list of{{/if}}
+                    all
+                    <span class="species-count">{{view.taxa_count}}</span>
+                    matching species.
+                  </a>
+                </script>
+                {% endverbatim %}
 
             </div>
 
