--- a/gobotany/static/sass/styles.scss
+++ b/gobotany/static/sass/styles.scss
@@ -532,6 +532,8 @@ body.app {
 
 #breadcrumb p {
     color: #807121;
+    font-family: $headings-font;
+    font-size: 14px;
     line-height: 120%;
     margin: 0 0 14px;
 }
