Removed toggle_view(), simplified photo/list toggling

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -73,7 +73,7 @@
 
                 <div class="clearit"></div>
 
-                <div class="show hidden">
+                <div>
                   {% handlebars %}
                     <form id="results-display"
                           {{bindAttr class="App3.show_list:hidden"}}>
