New CSS: Get the first page, About, in place.
Various HTML and CSS improvements were made, including reordering of
document elements to match natural reading order, some better
semantic structure with regard to heading levels, and a sidebar
that no longer needs its height set with JavaScript. (#215)

--- a/gobotany/site/templates/gobotany/_footer.html
+++ b/gobotany/site/templates/gobotany/_footer.html
@@ -1,4 +1,5 @@
         <footer>
+            <img src="/static/images/layout/little-plants.png" alt="">
             <div class="container">
                 <div class="publisher">
                     <p class="copyright">All images and text copyright 
