--- a/gobotany/site/templates/gobotany/_about_navigation.html
+++ b/gobotany/site/templates/gobotany/_about_navigation.html
@@ -1,27 +1,32 @@
         <div id="sidebar">
+            {# TODO: change url vars below once moved over to site app #}
             <div class="section">
-                {% url simplekey-help-about as u %}
-                <h5><a class="sidebarlink" {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>About Go Botany</a></h5>
+                {% url site-about as u %}
+                <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>About Go
+                        Botany</a></h4>
             </div>
             <div class="section">
                 {% url simplekey-help-start as u %}
-                <h5><a class="sidebarlink" {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Getting Started with the Simple Key</a></h5>
+                <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Getting
+                        Started with the Simple Key</a></h4>
             </div>
             <div class="section">
                 {% url simplekey-help-map as u %}
-                <h5><a class="sidebarlink" {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Advanced Map to Groups</a></h5>
+                <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Advanced Map
+                        to Groups</a></h4>
             </div>
             <div class="section">
                 {% url simplekey-help-glossary0 as u %}
-                <h5><a class="sidebarlink" {% if not u in request.path %}href="{{ u }}"{% endif %}>Glossary</a></h5>
+                <h4><a {% if not u in request.path %}href="{{ u }}"{% endif %}>Glossary</a></h4>
             </div>
             <div class="section">
                 {% url simplekey-help-video as u %}
-                <h5><a class="sidebarlink" {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Video Help Topics</a></h5>
+                <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Video Help
+                        Topics</a></h4>
             </div>
             <div class="section">
                 {% url simplekey-help-contrib as u %}
-                <h5><a class="sidebarlink" {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Contributors</a></h5>
+                <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Contributors</a></h4>
             </div>
             {% block more_sidebar_content %}{% endblock %}
         </div>
