--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -273,7 +273,7 @@ div.scrollableArea { position: relative; width: auto; height: 100%; }
 
 /* Definitions */
 /* Site-wide styles */
-body { background: #f0f0c0; color: black; font-family: Verdana, Geneva, sans-serif; font-size: 12px; padding: 0 8px; }
+body { background: #f0f0c0; color: black; font-family: Verdana, Geneva, sans-serif; font-size: 12px; }
 
 a { color: #508e31; text-decoration: none; }
 
@@ -281,11 +281,11 @@ a:not([href]) { color: black; }
 
 a:hover { text-decoration: underline; }
 
-h1, h2, h3, h4, h5, h6 { font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-weight: normal; }
+h1, h2, h3, h4, h5, h6 { font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-weight: normal; line-height: 155%; margin: 0; padding: 0; }
 
-h1 { color: #519136; font-size: 35px; }
+h1 { color: #519136; font-size: 35px; line-height: 110%; margin-bottom: 8px; }
 
-h2 { font-size: 24px; }
+h2 { font-size: 24px; margin: 8px 0; }
 
 h3 { font-size: 18px; }
 
@@ -295,9 +295,62 @@ h5, h6 { font-size: 12px; }
 
 h6 { font-weight: italic; }
 
+p, ul { line-height: 170%; margin: 0; padding: 0; }
+
 ul li { margin: 0 0 5px 0; }
 
 img.icon { margin: 0 3px 0 0; vertical-align: -2px; }
+
+/* Header */
+header { height: 120px; }
+header .container { margin: 0 auto; padding: 0 10px; width: 960px; }
+header p { margin: 0; }
+header .go-botany { float: left; margin: 0 0 0 -15px; padding: 14px 0 0 0; width: 443px; }
+header .go-botany a { background: url(/static/images/layout/logo-app.png) no-repeat transparent; height: 65px; width: 443px; display: block; text-indent: -9000px; }
+header .newfs { float: right; }
+header .newfs a { background: url(/static/images/layout/newfs-logo-app.png) no-repeat transparent; height: 66px; width: 116px; display: block; text-indent: -9000px; }
+header nav { background: url(/static/images/layout/nav-app-green.png) no-repeat; background-position: 0px 79px; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; height: 120px; padding: 0 0 0 48px; }
+header nav a { color: #fff; display: block; height: 35px; padding: 5px 8px 0; }
+header nav > a { display: none; /* Omit the 'sections' link by default */ }
+header nav ul { clear: both; }
+header nav li { display: block; float: left; font-size: 14px; line-height: normal; margin: 0 10px 0 0; padding: 0; }
+header nav li.about, header nav li a:hover { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; text-decoration: none; }
+header nav #search { background: white url(/static/images/layout/search-left.png) left center no-repeat; float: right; height: 20px; margin: 4px 4px 0 0; padding: 0 0 0 11px; }
+header nav #search form { display: block; margin: 0; padding: 0; width: 262px; }
+header nav #search input { background: #fff; border: 0; float: left; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-size: 14px; height: 20px; margin: 0; padding: 0; width: 219px; }
+header nav #search input:focus { outline: none; }
+header nav #search button { background: #508e31 url(/static/images/layout/search-btn.png) 0 0 no-repeat; border: none; cursor: pointer; float: right; height: 20px; margin: 0; outline: none; padding: 0; width: 43px; display: block; text-indent: -9000px; }
+header nav #search-suggest .menu { background: #fff; border: 1px solid #ccc; border-bottom-color: #999; border-right-color: #999; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; margin: 0 auto; position: absolute; text-align: left; top: 105px; width: 256px; z-index: 101; }
+header nav #search-suggest .menu li { clear: left; display: block; float: left; font-weight: bold; margin: 0; padding: 3px; }
+header nav #search-suggest .menu a { color: black; cursor: default; height: inherit; padding: 0; text-decoration: none; }
+
+/* Main content and sidebar */
+.content { padding: 8px 0 0; }
+.content .container { margin: 0 auto; padding: 0 10px; width: 960px; }
+.content #main { background: url(/static/images/layout/sidebar-bg.png) repeat-y; float: right; padding-bottom: 24px; padding-left: 250px; width: 710px; }
+.content #sidebar { border-top: 1px solid #c3d941; float: left; height: 100%; margin-right: -230px; padding: 16px 0; width: 230px; }
+.content #sidebar .section { padding: 0 17px 16px; }
+.content #sidebar .section h4 { margin: 0 0 5px 0; }
+.content #sidebar a:hover { text-decoration: none; }
+
+/* Footer */
+footer { background: #b4d57f; clear: both; height: 128px; position: relative; width: 100%; }
+footer .container { margin: 0 auto; padding: 0 10px; width: 960px; }
+footer > img { left: 50%; margin-left: -543px; position: absolute; top: -47px; }
+footer .publisher, footer .navigation { float: left; margin: 0 20px 0 0; padding: 18px 0; width: 305px; }
+footer h6 { font-family: Verdana, Geneva, sans-serif; font-size: 11px; }
+footer p { font-size: 9px; margin: 0 0 10px 0; }
+footer ul { font-size: 9px; list-style-type: none; margin-bottom: 12px; }
+footer li { display: inline; line-height: 14px; }
+footer li::after { content: " |"; }
+footer li:last-child::after { content: none; }
+footer .nsf-logo { float: left; margin: 0 10px 0 7px; }
+footer .support { margin-right: 0; padding: 18px 0; }
+
+/* About */
+#about #main img { float: right; margin: 5px 0 20px 20px; }
+#about #main img.bookcover { margin-right: 89px; }
+#about #main ul { margin: 0 5px 0 18px; }
 
 /* Imports for per-feature/app styles */
 /* (add here) */
