New CSS: Bring over media queries for basic page (About). (#215)

--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -11,6 +11,7 @@
 
 /* Imports for browser baseline, tools */
 @import "_normalize";
+@import "compass/css3/border-radius";
 
 /* Imports for third-party controls */
 @import "jquery.jscrollpane";
