--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -358,4 +358,72 @@ footer .support { margin-right: 0; padding: 18px 0; }
 /* Imports for per-feature/app styles */
 /* (add here) */
 /* Include media queries for smartphones and tablets. These should be last. */
+/* Begin media queries styles.  So far there are three sections for smartphones (two fixed-width layouts to cover portrait and landscape orientations, with a section common to both orientations) and some additional styles for tablets. Using fixed-width layouts allows some pages to have a wider central content area for now. */
+/* Portrait-orientation styles */
+@media only screen and (max-width: 400px) { body { padding-top: 110px; }
+  header nav > a { width: 20px; }
+  header nav > a span { display: none; }
+  body, header .container, .content .container, footer .container { width: 320px; }
+  .top-level header p.go-botany a { background-position: -56px -7px; width: 200px; }
+  #nav { left: 40px; width: 310px; }
+  .content #main { width: 304px; }
+  .content #sidebar { float: none; width: 302px; }
+  #about #main > img { width: 57%; }
+  #about #main img.bookcover { width: auto; } }
+/* Landscape-orientation styles */
+@media only screen and (min-width: 401px) and (max-width: 600px) { html { -webkit-text-size-adjust: none; }
+  body { padding-top: 75px; }
+  body, header .container, .content .container, footer .container { width: 480px; }
+  header nav > a { width: 80px; }
+  header nav > a span { font-size: 14px; line-height: 160%; padding-left: 5px; position: absolute; }
+  .top-level header p.go-botany a { background-position: 0 -7px; width: 260px; }
+  .content #main { width: 464px; }
+  .content #sidebar { width: 462px; } }
+/* These styles are common to both smartphone widths */
+@media only screen and (max-width: 600px) { body { margin: 0 auto; padding: 0; }
+  h1 { font-size: 24px; }
+  h2 { font-size: 18px; }
+  h3 { font-size: 16px; }
+  header { height: 90px; }
+  header nav { background: #508e31; clear: left; height: 32px; padding: 0; }
+  header nav > a { background: #437829; border: 1px solid #437829; display: inline-block; font-size: 30px; height: 24px; line-height: 68%; margin: 3px 0 0 4px; padding: 0 2px 0 7px; position: relative; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; }
+  header nav > a:hover { background: #437829; }
+  header nav #search { margin-top: 6px; padding-left: 10px; }
+  header nav > ul { display: none; /* will use bottom navigation instead of top */ }
+  header nav #search-suggest .menu { top: 83px; }
+  header p.go-botany { margin: 0; padding: 0; width: auto; }
+  header p.go-botany a { height: 56px; width: 170px; }
+  header p.newfs a { background-size: 100px 55px; float: right; height: 55px; width: 101px; }
+  header .container { padding: 0; }
+  footer { height: auto; margin: 14px 0 0; }
+  footer > img { display: none; }
+  footer .container { height: auto; padding: 0; }
+  footer .container div { width: auto; }
+  footer div div { height: auto; }
+  footer p { margin: 0; }
+  footer a { font-size: 11px; }
+  footer .publisher, footer .navigation { float: none; margin: 0; padding: 0; }
+  footer .publisher { margin: 14px 0 0; padding: 12px 8px 20px; }
+  footer .navigation h6:first-child { display: none; }
+  footer .navigation > ul.sections li { display: block; margin: 0 0 1px 0; }
+  footer .navigation > ul.sections li:after { content: none; }
+  footer .navigation > ul.sections li a { background: #85c446; color: #fff; display: block; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-size: 14px; padding: 14px 14px; position: relative; text-decoration: none; }
+  footer .navigation > ul.sections li a:after { content: " >"; font-weight: bold; position: absolute; right: 14px; }
+  footer .navigation > ul.sections li a[href] { background: #508e31; color: #fff; }
+  footer .navigation > ul.sections + h6 { /* "Legal:" label */ display: none; }
+  footer .navigation > h6:nth-of-type(2) { margin: 14px 14px 4px 71px; }
+  footer .navigation > h6:nth-of-type(2):after { content: ":"; }
+  footer .navigation > h6:nth-of-type(2), footer .navigation > ul.legal { display: inline-block; margin-left: 72px; margin-top: 12px; }
+  footer .navigation .legal li { margin-right: 32px; }
+  footer .navigation .legal li:after { content: none; }
+  footer .support { height: 63px; margin: 14px 0 0; padding: 0; }
+  footer .support img { padding-bottom: 6px; }
+  .content .container { padding: 0; }
+  .content #main { background: none; float: none; margin-left: 8px; margin-right: 8px; padding-bottom: 14px; padding-left: 0; }
+  .content #sidebar { background: #fff; border: 1px solid #c3d941; height: auto; margin-bottom: 14px; margin-left: 8px; margin-right: 8px; }
+  .content #sidebar .section { margin-top: 16px; padding-bottom: 0; }
+  .content #sidebar .section:first-child { margin-top: 0; }
+  #about #main ul { margin-left: 8px; padding-left: 6px; }
+  #about #main > img, #about #main img.bookcover { margin-bottom: 8px; margin-left: 8px; margin-right: 0; } }
+/* End media queries styles */
 /* Please do not add new regular styles after the media queries, or they may not get overridden properly. Instead, add them before the media queries. */
