Removed Family and Genus slug in favor of caps
For the sake of the children, we now capitalize family and genus names
when they appear in URLs, since capital letters are allowed in URLs.
The non-capitalized version of each URL now redirects to the capitalized
one.  This change has been tested with ftests and looks good.

--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -75,7 +75,7 @@
                                 {{ item_title }}</a>
                         {% endif %}
                         {% if result.model_name == 'subgroupslistpage' %}
-                            <a href="{% url simplekey-pilegroup result.object.group.slug %}">
+                            <a href="{% url simplekey-pilegroup result.object.group.name %}">
                             <img src="/static/images/icons/icon-groups-list.png"
                                 alt="" title="Simple Key plant subgroups page">
                                 {{ item_title }}</a>
