Returned family and genus slugs to lowercase
In the process, introduced a simplekey.URLs test that verifies that
URLs are working properly and that old legacy URLs are redirecting,
and also cleared up some terminology confusion by collapsing three
different terms in the source for the same concept - "epithet",
"specific_name", and "specific_epithet" - into the first term only.

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -318,13 +318,13 @@
 
                 <div class="section">
                     <h5>Family:</h5>
-                    <p><a href="{% url simplekey-family taxon.family.name %}"
+                    <p><a href="{% url simplekey-family taxon.family.slug %}"
                         >{{ taxon.family }}</a></p>
                 </div>
 
                 <div class="section">
                     <h5>Genus:</h5>
-                    <p><em><a href="{% url simplekey-genus taxon.genus.name %}"
+                    <p><em><a href="{% url simplekey-genus taxon.genus.slug %}"
                         >{{ taxon.genus }}</a></em></p>
                 </div>
 
