--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -49,7 +49,7 @@
                         <a href="{% url simplekey-pilegroup pilegroup.slug %}"
                             >{{ pilegroup.friendly_title|lower|capfirst }}</a>
                         &gt; 
-                        <a href="{% if last_plant_id_url and pile.slug in last_plant_id_url %}{{ last_plant_id_url }}{% else %}{% url simplekey-pile pilegroup.slug pile.slug %}{% endif %}"
+                        <a href="{% url simplekey-pile pilegroup.slug pile.slug %}"
                             >{{ pile.friendly_title|lower|capfirst }}</a>
                         &gt;
                         <span>{{ scientific_name|italicize_plant|safe }}
